# ha-dali-center

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test.yaml  validate.yaml
custom_components/dali_center/: __init__.py  button.py  config_flow.py  const.py  device_trigger.py  entity.py  event.py  helper.py  light.py  manifest.json  number.py  scene.py  sensor.py  services.py  services.yaml  switch.py  types.py
custom_components/dali_center/config_flow_helpers/: entity_helpers.py  ui_helpers.py
custom_components/dali_center/translations/: en.json
openspec/changes/improve-robustness-performance/: design.md  proposal.md  tasks.md
openspec/changes/improve-robustness-performance/specs/gateway-connection/: spec.md
openspec/specs/gateway-connection/: spec.md
tests/: __init__.py  conftest.py  test_bus_scan.py  test_button.py  test_button_scan.py  test_config_flow.py  test_device_trigger.py  test_device_trigger_simple.py  test_entity_helpers.py  test_event.py  test_helper.py  test_init.py  test_light.py  test_light_cct_range.py  test_light_group_brightness.py  test_number_config.py  test_sensor.py  test_switch.py  test_ui_helpers.py
